# docs/swagger.json
@@ -29,7 +29,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.indexData"
+                            "$ref": "#/definitions/api.indexData"
                         }
                     }
                 }
@@ -57,15 +57,7 @@
         }
     },
     "definitions": {
-        "api_v1.message": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "main.indexData": {
+        "api.indexData": {
             "type": "object",
             "properties": {
                 "dirty_build": {
@@ -81,6 +73,14 @@
                     "type": "string"
                 },
                 "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "api_v1.message": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
